Add divs for page title and buttons

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="top">
+    <div>Rock Paper Scissors!</div>
+  </div>
+  <div class="middle">
+    <div class="buttonContainer">
+      <button id="rock"></button>
+      <button id="paper"></button>
+      <button id="scissors"></button>
+    </div>
+  </div>
   <div>SUP!</div>
 </body>
 </html>
