--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </div>
   <div class="middle">
     <div class="buttonContainer">
-      <button id="rock"></button>
-      <button id="paper"></button>
-      <button id="scissors"></button>
+      <button id="rock">Rock</button>
+      <button id="paper">Paper</button>
+      <button id="scissors">Scissors</button>
     </div>
   </div>
   <div>SUP!</div>
