Add more formatting divs

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <button id="scissors">Scissors</button>
     </div>
   </div>
+  <div class="footer">
+  Goodbye
+  </div>
   <div>SUP!</div>
 </body>
 </html>
