--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="javascript.js"></script>
+  <script src="javascript.js" defer></script>
   <link rel="stylesheet" href="styles.css">
-  <title>Document</title>
 </head>
 <body>
   <div class="top">
@@ -18,10 +17,10 @@
       <button id="paper">Paper</button>
       <button id="scissors">Scissors</button>
     </div>
+    <div class="wins"></div>
   </div>
   <div class="footer">
   Goodbye
   </div>
-  <div>SUP!</div>
 </body>
 </html>
